# fmtor

./: Cargo.toml  README.md
.github/workflows/: stable.yml
src/: lib.rs  tests.rs
